SUBDIRS = 
include $(top_srcdir)/Makefile.generic 
check_PROGRAMS     =
EXTRA_DIST =  \
	README \
	sync_commands.tcl \
	all all.individually all.perf all_nortree \
	alloc.1 alloc.2 alloc.3 alloc.4 alloc.5 alloc.6 \
	alloc.7 alloc.8 alloc.9 alloc.10 alloc.11 alloc.all \
	bng.1 bng.init \
	bt.tcl bt.1  \
	bt.insert.0 bt.insert.1 bt.insert.2 bt.insert.3 \
	bt.insert.4 bt.insert.5 \
	bt.insertremove.0 \
	bt.remove.0 bt.remove.1 bt.remove.2 bt.remove.3 bt.remove.4 \
	btree.1 btree.10 btree.11 btree.2 btree.20 btree.21 \
	btree.2all btree.2all.print btree.3 btree.30 btree.31 btree.32 \
	btree.33 btree.3a btree.4 btree.5 btree.6 btree.6int \
	btree.7 btree.8 btree.9 btree.all btree.big.1 \
	btree.big.1.keys btree.destroy.1 \
	btree.err.1 btree.err.2 btree.err.3 btree.err.4 \
	btree.load btree.load.multi btree.long.all \
	btree.simple.1 btree_split.1 \
	c.perf cd.perf cd.perf.0 cd.perf.1 cd.perf.2 cd.perf.3 \
	cd.perf.4 cd.perf.5 cd.perf.6 cd.perf.7 cd.perf.8 \
	cleanup.all \
	confidence \
	create.perf createsmall.1 \
	deadlock.1 deadlock.2 pin_deadlock.1 deadlock.4 deadlock.5 deadlock.6 \
	destroy.perf \
	empty \
	file.1 file.2 file.3 file.4 file.5 file.5a file.6 \
	file.7 file.8 file.9 file.activity file.activity2 \
	file.all file.long.all file.many file.many.perf  \
	file.perf file.perf2 file.perf3 \
	file.undo.1 file.undo.2 file_destroy.1 \
	free.all free_ext free_page free_page.abort freepage.bug \
	lgrec.1 lgrec.2 lgrec.3 lgrec.4 lgrec.5 lgrec.6 \
	lgrec.all lgrec.long.all \
	lgrec.very.0 lgrec.very.1 lgrec.very.2 lgrec.very.3 \
	loadrec.perf  \
	lock.1 lock.all lock.hier lock.hier_sm \
	lock.perf lock.upgrade lockfile_sm lockrec_pin lockrec_sm \
	long.all \
	mpw mpw.sub mpw.sub2 \
	multi.1 multi.2 multi.3 multi.all \
	pin.1 pin.2 pin.3 pin.4 pin.5 pin.all pin.long.all \
	quark.1 quark.1.sub.reader quark.1.sub.writer quark.all \
	random.all random.perf random.perf.tcl \
	read2.perf record_create_abort.1 \
	recovery.1 recovery.2 recovery.3 recovery.4 recovery.5 recovery.all \
	rtree.1 rtree.2 rtree.3 rtree.4 rtree.all \
	scan.all \
	simplewrite.perf \
	sort.1 sort.1a sort.2 sort.3 sort.3a sort.4 sort.4a \
	sort.all sort.long.all sort.mkey.1 \
	space_recovery \
	subonly.3 subord.start \
	thread_fork_example \
	tmpfile.1 tmpfile.2 tmpfile.3 trans.1 \
	trans.2 trans.3 trans.4 trans.all trans.tcl \
	vol.1 vol.3 vol.all vol.init \
	write.perf write.perf.restart

